src/objects/Apttus_Config2__OrderAdjustmentLineItem__c.object
<CustomObject>
    <description>Represents an adjustment to the price of a product/service</description>
    <fields>
        <fullName>APTS_Agreement_LineItem_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Kauri Wave 3 : This is a lookup to Agreement Line Item Object.</description>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Order Adjustment Line Items</relationshipLabel>
        <relationshipName>Order_Adjustment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Number__c</fullName>
        <description>Kauri Wave 3 : This is to track the Agreement Number</description>
        <label>Agreement Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Incentive_Adjustment_Amount__c</fullName>
        <description>Field sets adjustment price field applicable to SAP. SAP will take data from this.</description>
        <formula>IF( (ISPICKVAL(Apttus_Config2__LineItemId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c,&apos;XD09&apos;) ||ISPICKVAL(Apttus_Config2__LineItemId__r.Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c,&apos;XD01&apos;) ) ,Apttus_Config2__IncentiveAdjustmentAmount__c,
IF( ISPICKVAL(Apttus_Config2__LineItemId__r.Apttus_Config2__PriceType__c, &apos;Recurring&apos;), 
	IF(
		ISPICKVAL( Apttus_Config2__LineItemId__r.Apttus_Config2__SellingFrequency__c , &apos;Monthly&apos;) , 
		(Apttus_Config2__IncentiveAdjustmentAmount__c/ Apttus_Config2__LineItemId__r.Apttus_Config2__Term__c)*1 , 
		IF( 
			ISPICKVAL( Apttus_Config2__LineItemId__r.Apttus_Config2__SellingFrequency__c , &apos;Quarterly&apos;) , (Apttus_Config2__IncentiveAdjustmentAmount__c/ Apttus_Config2__LineItemId__r.Apttus_Config2__Term__c)*3, 
			IF( 
				ISPICKVAL( Apttus_Config2__LineItemId__r.Apttus_Config2__SellingFrequency__c , &apos;Half Yearly&apos;) , (Apttus_Config2__IncentiveAdjustmentAmount__c/ Apttus_Config2__LineItemId__r.Apttus_Config2__Term__c)*6, IF( ISPICKVAL( Apttus_Config2__LineItemId__r.Apttus_Config2__SellingFrequency__c , &apos;Yearly&apos;) , (Apttus_Config2__IncentiveAdjustmentAmount__c/ Apttus_Config2__LineItemId__r.Apttus_Config2__Term__c)*12,0)
			)
		)
	), 
	IF(APTS_Return_Adjustment_Price__c &gt;= 0.01, APTS_Return_Adjustment_Price__c, Apttus_Config2__IncentiveAdjustmentAmount__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adjusted Price</inlineHelpText>
        <label>Incentive Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Incentive_Amount_Per_Billing_Period__c</fullName>
        <formula>IF( ISPICKVAL( Apttus_Config2__LineItemId__r.Apttus_Config2__SellingFrequency__c , &apos;Monthly&apos;) , (Apttus_Config2__IncentiveAdjustmentAmount__c/ Apttus_Config2__LineItemId__r.Apttus_Config2__Term__c)*1 , IF( ISPICKVAL( Apttus_Config2__LineItemId__r.Apttus_Config2__SellingFrequency__c , &apos;Quarterly&apos;) , (Apttus_Config2__IncentiveAdjustmentAmount__c/ Apttus_Config2__LineItemId__r.Apttus_Config2__Term__c)*3, IF( ISPICKVAL( Apttus_Config2__LineItemId__r.Apttus_Config2__SellingFrequency__c , &apos;Half Yearly&apos;) , (Apttus_Config2__IncentiveAdjustmentAmount__c/ Apttus_Config2__LineItemId__r.Apttus_Config2__Term__c)*6, IF( ISPICKVAL( Apttus_Config2__LineItemId__r.Apttus_Config2__SellingFrequency__c , &apos;Yearly&apos;) , (Apttus_Config2__IncentiveAdjustmentAmount__c/ Apttus_Config2__LineItemId__r.Apttus_Config2__Term__c)*12,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Amount Per Billing Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Return_Adjustment_Price__c</fullName>
        <description>Field contains amount that needs to be returned to customer (Similar to delta price but with Adjustment break up)</description>
        <inlineHelpText>Field contains amount that needs to be returned to customer (Similar to delta price but with Adjustment break up)</inlineHelpText>
        <label>Return Adjustment Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAppliesTo__c</fullName>
        <description>Indicates the price field the price adjustment should be applied to.</description>
        <label>Adjustment Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Starting Price</fullName>
                    <label>On Starting Price</label>
                </value>
                <value>
                    <fullName>Bucket 1</fullName>
                    <label>On Net List</label>
                </value>
                <value>
                    <fullName>Bucket 2</fullName>
                    <label>On Inflation</label>
                </value>
                <value>
                    <fullName>Bucket 3</fullName>
                    <label>On PPR</label>
                </value>
                <value>
                    <fullName>Bucket 4</fullName>
                    <label>On TPR</label>
                </value>
                <value>
                    <fullName>Bucket 5</fullName>
                    <label>On BMC/BDF/EFF</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                    <default>true</default>
                    <label>% Discount</label>
                </value>
                <value>
                    <fullName>Base Price Discount</fullName>
                    <label>Discount Amount PerUnit</label>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                    <label>Discount Amount Extended</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentUom__c</fullName>
        <description>The adjustment unit of measure</description>
        <inlineHelpText>The adjustment unit of measure</inlineHelpText>
        <label>Adjustment Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BenefitQuantity__c</fullName>
        <description>The incentive benefit quantity</description>
        <inlineHelpText>The incentive benefit quantity</inlineHelpText>
        <label>Benefit Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Bucket__c</fullName>
        <description>The bucket for grouping adjustments</description>
        <inlineHelpText>The bucket for grouping adjustments</inlineHelpText>
        <label>Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bucket 1</fullName>
                    <label>Discount GSV</label>
                </value>
                <value>
                    <fullName>Bucket 2</fullName>
                    <label>Inflation</label>
                </value>
                <value>
                    <fullName>Bucket 3</fullName>
                    <label>PPR</label>
                </value>
                <value>
                    <fullName>Bucket 4</fullName>
                    <label>TPR</label>
                </value>
                <value>
                    <fullName>Bucket 5</fullName>
                    <label>BMC/BDF/EFF</label>
                </value>
                <value>
                    <fullName>Bucket 6</fullName>
                    <label>YOCI/YOFT</label>
                </value>
                <value>
                    <fullName>Bucket 7</fullName>
                    <isActive>false</isActive>
                    <label>Bucket 7</label>
                </value>
                <value>
                    <fullName>Bucket 8</fullName>
                    <isActive>false</isActive>
                    <label>Bucket 8</label>
                </value>
                <value>
                    <fullName>Bucket 9</fullName>
                    <isActive>false</isActive>
                    <label>Bucket 9</label>
                </value>
                <value>
                    <fullName>Inflation</fullName>
                    <isActive>false</isActive>
                    <label>Inflation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CouponCode__c</fullName>
        <description>The incentive coupon code</description>
        <inlineHelpText>The incentive coupon code</inlineHelpText>
        <label>Coupon Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveAdjustmentAmount__c</fullName>
        <description>The incentive benefit amount</description>
        <inlineHelpText>The incentive benefit amount</inlineHelpText>
        <label>Incentive Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Order Adjustment Line Items</relationshipLabel>
        <relationshipName>OrderAdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the adjustment is modifiable</description>
        <label>Is Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <description>ID of the associated order line item</description>
        <inlineHelpText>ID of the associated order line item</inlineHelpText>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>AdjustmentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineNumber__c</fullName>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the adjustment rule entry</description>
        <inlineHelpText>ID of the adjustment rule Entry</inlineHelpText>
        <label>Price Rule Entry</label>
        <referenceTo>Apttus_Config2__PriceRuleEntry__c</referenceTo>
        <relationshipLabel>Order Adjustment Line Items</relationshipLabel>
        <relationshipName>OrderAdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the adjustment rule</description>
        <inlineHelpText>ID of the adjustment rule</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>Apttus_Config2__PriceRule__c</referenceTo>
        <relationshipLabel>Order Adjustment Line Items</relationshipLabel>
        <relationshipName>OrderAdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RunningTotalAdjustedPrice__c</fullName>
        <description>The adjusted price running total after applying the adjustment</description>
        <inlineHelpText>The adjusted price running total after applying the adjustment</inlineHelpText>
        <label>Running Total (Adjusted Price)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SubType__c</fullName>
        <description>The user defined sub type</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZP06</fullName>
                    <label>Permanent Discount</label>
                </value>
                <value>
                    <fullName>ZP07</fullName>
                    <label>Additional Permanent Discount</label>
                </value>
                <value>
                    <fullName>ZP04</fullName>
                    <label>Temporary Discount (Manual)</label>
                </value>
                <value>
                    <fullName>ZP08</fullName>
                    <label>Promotional Discount</label>
                </value>
                <value>
                    <fullName>ZP10</fullName>
                    <label>Promotional Discount (Coupons)</label>
                </value>
                <value>
                    <fullName>ZX10</fullName>
                    <label>Free Of Charge (100% Discount)</label>
                </value>
                <value>
                    <fullName>ZP15</fullName>
                    <label>Brand Marketing Campaign (Budget)</label>
                </value>
                <value>
                    <fullName>ZP11</fullName>
                    <label>Business Development Funds (YER)</label>
                </value>
                <value>
                    <fullName>ZP13</fullName>
                    <label>Business Development Funds (PPR)</label>
                </value>
                <value>
                    <fullName>ZP12</fullName>
                    <label>Efficiency Discount</label>
                </value>
                <value>
                    <fullName>YOCI</fullName>
                    <label>Consignment Ingredients</label>
                </value>
                <value>
                    <fullName>YOFT</fullName>
                    <label>Fixed term</label>
                </value>
                <value>
                    <fullName>ZP03</fullName>
                    <label>Discount Surcharge GSV</label>
                </value>
                <value>
                    <fullName>ZP02</fullName>
                    <label>Inflation correction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The user defined type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPR</fullName>
                    <default>true</default>
                    <label>Permanent Discount</label>
                </value>
                <value>
                    <fullName>TPR</fullName>
                    <label>Temporary Discount</label>
                </value>
                <value>
                    <fullName>BMC</fullName>
                    <label>Budget/Development/Efficiency</label>
                </value>
                <value>
                    <fullName>YOCI</fullName>
                    <label>Consignment</label>
                </value>
                <value>
                    <fullName>YOFT</fullName>
                    <label>Fixed Term</label>
                </value>
                <value>
                    <fullName>GSV</fullName>
                    <label>Discount Surcharge GSV</label>
                </value>
                <value>
                    <fullName>Inflation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order Adjustment Line Item</label>
    <nameField>
        <displayFormat>AD-{0000000000}</displayFormat>
        <label>Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Adjustment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>